Replaces some instances of the old name

--- a/ImageWriter/Base.lproj/Main.storyboard
+++ b/ImageWriter/Base.lproj/Main.storyboard
@@ -11,18 +11,18 @@
                 <application id="hnw-xV-0zn" sceneMemberID="viewController">
                     <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                         <items>
-                            <menuItem title="ImageWriter" id="1Xt-HY-uBw">
+                            <menuItem title="Tiny Flasher" id="1Xt-HY-uBw">
                                 <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="ImageWriter" systemMenu="apple" id="uQy-DD-JDr">
+                                <menu key="submenu" title="Tiny Flasher" systemMenu="apple" id="uQy-DD-JDr">
                                     <items>
-                                        <menuItem title="About ImageWriter" id="5kV-Vb-QxS">
+                                        <menuItem title="About Tiny Flasher" id="5kV-Vb-QxS">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
                                                 <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                                        <menuItem title="Hide ImageWriter" keyEquivalent="h" id="Olw-nP-bQN">
+                                        <menuItem title="Hide Tiny Flasher" keyEquivalent="h" id="Olw-nP-bQN">
                                             <connections>
                                                 <action selector="hide:" target="Ady-hI-5gd" id="PnN-Uc-m68"/>
                                             </connections>
@@ -40,7 +40,7 @@
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                                        <menuItem title="Quit ImageWriter" keyEquivalent="q" id="4sb-4s-VLi">
+                                        <menuItem title="Quit Tiny Flasher" keyEquivalent="q" id="4sb-4s-VLi">
                                             <connections>
                                                 <action selector="tryTerminate:" target="Voe-Tx-rLC" id="YS5-Ug-XLE"/>
                                             </connections>
